* Add first cut at config editor into Clira * Add latest bootstrap into Clira

--- a/web/clira/index.html
+++ b/web/clira/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/css/clira.css" class="ui-main">
   <link rel="stylesheet" href="/external/jqgrid/ui.jqgrid.css"/>
   <link rel="stylesheet" href="/external/jquery-qtip/jquery.qtip.css"/>
+  <link rel="stylesheet" href="/external/bootstrap/css/bootstrap.min.css"/>
 </head>
 <body>
   <script type="text/x-handlebars">
@@ -80,6 +81,8 @@
   <script type="text/x-handlebars" data-template-name="output_content">
     <div class="output-content">
       {{{controller.output}}}
+      <div id="connection-output">
+      </div>
     </div>
   </script>
 
