* Rejigger Clira web hierarchy around to be more clear * Trap possible null crash in cgi processing

--- a/web/index.html
+++ b/web/index.html
@@ -230,20 +230,20 @@
   <script src="/external/ember-restless/ember-restless+extras.js"></script>
   <script src="/external/jqgrid/grid.locale-en.js"></script>
   <script src="/external/jqgrid/jquery.jqGrid.src.js"></script>
-  <script src="/jquery/jquery.dbgpr.js"></script>
+  <script src="/core/jquery.dbgpr.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
   <script src="/external/gmaps/gmaps.js"></script>
   <script src="/external/jquery-qtip/jquery.qtip.js"></script>
-  <script src="clira.prefs.js"></script>
-  <script src="clira.muxer.js"></script>
-  <script src="clira.js"></script>
-  <script src="parser.js"></script>
-  <script src="parser.types.js"></script>
-  <script src="builtins.js"></script>
-  <script src="app.js"></script>
-  <script src="models.js"></script>
-  <script src="views.js"></script>
-  <script src="clira.prefs.views.js"></script>
-  <script src="controllers.js" id="last-script-in-header"></script>
+  <script src="/core/clira.prefs.js"></script>
+  <script src="/core/clira.muxer.js"></script>
+  <script src="/core/clira.js"></script>
+  <script src="/core/parser.js"></script>
+  <script src="/core/parser.types.js"></script>
+  <script src="/core/builtins.js"></script>
+  <script src="/core/app.js"></script>
+  <script src="/core/models.js"></script>
+  <script src="/core/views.js"></script>
+  <script src="/core/clira.prefs.views.js"></script>
+  <script src="/core/controllers.js" id="last-script-in-header"></script>
 </body>
 </html>
