--- a/web/index.html
+++ b/web/index.html
@@ -141,7 +141,7 @@
   </script>
 
   <script type="text/x-handlebars" data-template-name="conn_status">
-    <div id="prefs-devices-connect" title="Connection Status">
+    <div id="prefs-devices-connect" title="Connection Status" style="display:none;">
       <div id="connect-status"></div>
     </div>
   </script>
